# QtMarstek

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: API.md  architecture.md  contributing.md  protocol.md  roadmap.md
examples/Console/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  JsonRpcUtils.cpp  JsonRpcUtils.h  MarstekConstants.h  MarstekCrc16.h  MarstekDatagram.h  MarstekDevice.cpp  MarstekDevice.h  MarstekDiscovery.cpp  MarstekDiscovery.h  MarstekDiscoveryInfo.h  MarstekEndian.h  MarstekMethods.h  MarstekPacket.cpp  MarstekPacket.h  MarstekPacketReader.cpp  MarstekPacketReader.h  MarstekPacketWriter.cpp  MarstekPacketWriter.h  MarstekProtocol.cpp  MarstekProtocol.h  MarstekTransport.cpp  MarstekTransport.h
tests/: CMakeLists.txt  TestMarstekPacket.cpp  TestMarstekPacketReader.cpp  TestMarstekPacketWriter.cpp  TestMarstekProtocol.cpp  TestUtils.h
